--- a/CardsDBZ/CardsDBZ.csproj
+++ b/CardsDBZ/CardsDBZ.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="ImageMaker.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
