--- a/CardsDBZ/CardsDBZ.csproj
+++ b/CardsDBZ/CardsDBZ.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CardDrop.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="GameAction.cs" />
     <Compile Include="ImageMaker.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -65,6 +66,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Table.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
