--- a/CardsDBZ/CardsDBZ.csproj
+++ b/CardsDBZ/CardsDBZ.csproj
@@ -53,6 +53,12 @@
     <Compile Include="CardDrop.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Game.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Game.Designer.cs">
+      <DependentUpon>Game.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameAction.cs" />
     <Compile Include="ImageMaker.cs" />
     <Compile Include="Main.cs">
@@ -67,6 +73,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Table.cs" />
+    <EmbeddedResource Include="Game.resx">
+      <DependentUpon>Game.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,7 +99,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\BITSUMIS.TTF" />
+    <EmbeddedResource Include="Resources\BITSUMIS.TTF" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
